# hajar

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: DQ-K2-L10-R5-2023-01-31-22-57-43-mcts1000.benchmark_data  DQ-K2-L10-R5-2023-01-31-22-57-43-mcts2000.benchmark_data  DQ-K2-L10-R5-2023-01-31-22-57-43-mcts500.benchmark_data  DQ-K2-L10-R5-2023-01-31-22-57-43-n_move_solver_4.benchmark_data  DQ-K2-L10-R5-2023-01-31-22-57-43-two_move_solver.benchmark_data  DQ-K2-L10-R5-2023-01-31-22-57-43.win_data  DQ-K4-L10-R3-2023-01-31-22-58-09-mcts1000.benchmark_data  DQ-K4-L10-R3-2023-01-31-22-58-09-mcts2000.benchmark_data  DQ-K4-L10-R3-2023-01-31-22-58-09-mcts500.benchmark_data  DQ-K4-L10-R3-2023-01-31-22-58-09-n_move_solver_4.benchmark_data  DQ-K4-L10-R3-2023-01-31-22-58-09-two_move_solver.benchmark_data  DQ-K4-L10-R3-2023-01-31-22-58-09.network_data  DQ-K4-L10-R3-2023-01-31-22-58-09.win_data  DQ-K4-L10-R5-2023-01-31-22-57-18-mcts1000.benchmark_data  DQ-K4-L10-R5-2023-01-31-22-57-18-mcts2000.benchmark_data  DQ-K4-L10-R5-2023-01-31-22-57-18-mcts500.benchmark_data  DQ-K4-L10-R5-2023-01-31-22-57-18-n_move_solver_4.benchmark_data  DQ-K4-L10-R5-2023-01-31-22-57-18-two_move_solver.benchmark_data  DQ-K4-L10-R5-2023-01-31-22-57-18.network_data  DQ-K4-L10-R5-2023-01-31-22-57-18.win_data  DQ-K4-L200-R5-2023-01-31-22-57-53-mcts1000.benchmark_data  DQ-K4-L200-R5-2023-01-31-22-57-53-mcts2000.benchmark_data  DQ-K4-L200-R5-2023-01-31-22-57-53-mcts500.benchmark_data  DQ-K4-L200-R5-2023-01-31-22-57-53-n_move_solver_4.benchmark_data  DQ-K4-L200-R5-2023-01-31-22-57-53.network_data  (+126 more)
(+135 files in other folders)
